# MusicSynthesis_v2

./: Basis.cpp  Basis.h  BasisStructs.h  BitWise32int_3.h  BitWiseDeque64.h  BitWiseStack16_3.h  CMakeLists.txt  Constants.h  CyclicArray.h  Duration.cpp  Duration.h  Fragment.cpp  Fragment.h  Globals.cpp  Globals.h  KeySignature.cpp  KeySignature.h  KeySignatureDefault.cpp  KeySignatureDefault.h  Measure.cpp  Measure.h  Note.cpp  Note.h  Processing.cpp  Processing.h  RBTree.h  Rest.cpp  Rest.h  Type.cpp  Type.h  XmlDomDocument.cpp  XmlDomDocument.h  XmlDomDocument_T.cpp  XmlDomDocument_T.h  XmlDomErrorHandler.cpp  XmlDomErrorHandler.h  XmlDomErrorHandler_T.cpp  XmlDomErrorHandler_T.h  main.cpp  music_tester2.xml
Duration/: Chord.cpp  Chord.h  Duration.cpp  Duration.h  MeasureRest.cpp  MeasureRest.h  MeasureSpace.cpp  MeasureSpace.h  MultiMeasureRest_T.cpp  MultiMeasureRest_T.h  Note.cpp  Note.h  Rest.cpp  Rest.h  TimeFraction.h
Element/: Layer.cpp  Layer.h  Measure.cpp  Measure.h  Music.cpp  Music.h  ScoreDefinition.cpp  ScoreDefinition.h  Section.cpp  Section.h  Staff.cpp  Staff.h  StaffDefinition.cpp  StaffDefinition.h  StaffGroup.cpp  StaffGroup.h
HyperGraph/: HyperEdge.cpp  HyperEdge.h  HyperGraph.cpp  HyperGraph.h  HyperNode.cpp  HyperNode.h  Instantiate.cpp  Instantiate.h
